--- a/planilha_quantificacao/estilo.css
+++ b/planilha_quantificacao/estilo.css
@@ -36,7 +36,7 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 1em;
-    max-width: 40%;
+    max-width: 50%;
     box-shadow: 10px 10px rgba(155, 155, 155, 0.281);
 }
 
@@ -52,6 +52,12 @@ main {
     flex: 0 0 250px;
     margin: 0;
     min-width: 200px;
+}
+
+.input-group select {
+    flex: 0 0 110px;
+    margin: 0;
+    min-width: 20px;
 }
 
 .input-group input {
