--- a/planilha_quantificacao/estilo.css
+++ b/planilha_quantificacao/estilo.css
@@ -28,10 +28,12 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 5%;
 }
 
-#inputs {
-    margin: 5% auto;
+
+#inputs, #backbones, #inputs_secundarios {
+    margin: 0% 5% 3.5% 5%;
     padding: 1em;
     background-color: rgba(240, 240, 240, 0.863);
     border-radius: 10px;
@@ -41,8 +43,18 @@ main {
     gap: 1em;
     max-width: 50%;
     box-shadow: 10px 10px rgba(155, 155, 155, 0.281);
+    transition: opacity 0.5s ease, height 0.5s ease; 
 }
 
+.hidden {
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+}
+
+#botao {
+    margin-bottom: 3%;
+}
 
 .input-group {
     display: flex;
